--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 @import 'https://fonts.googleapis.com/css?family=Chango';
 
-
 body{
-  background-color: orange;
   font-family: 'Chango', cursive;
-
+  background: red; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left,rgba(255,0,0,0),rgba(255,0,0,1)); /*Safari 5.1-6*/
+  background: -o-linear-gradient(right,rgba(255,0,0,0),rgba(255,0,0,1)); /*Opera 11.1-12*/
+  background: -moz-linear-gradient(right,rgba(255,0,0,0),rgba(255,0,0,1)); /*Fx 3.6-15*/
+  background: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); /*Standard*/
+}
+h1 {
+  /*font-size: 72px;*/
+  background: -webkit-linear-gradient(orange, #FF1EA8);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
