--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ h1 {
   -webkit-text-fill-color: transparent;
 }
 .glow {
-  /*color: #444;*/
   text-shadow:
     1px 0px 1px orange, 0px 1px 1px #FF1EA8,
     2px 1px 1px orange, 1px 2px 1px #FF1EA8,
@@ -32,11 +31,12 @@ h1 {
   margin-bottom: 5%;
 }
 .celsius, .farenheit{
-    display: inline-block;
-    background: -webkit-linear-gradient(#85eafc, #147e92);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    border-color: #147e92;
+  display: inline-block;
+  background: -webkit-linear-gradient(#85eafc, #147e92);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  border: none;
+  margin-bottom: 5%;
 }
 button:focus{
   outline:0;
