--- a/style.css
+++ b/style.css
@@ -56,7 +56,16 @@ button:focus{
 	to { transform: rotate(360deg); }
 }
 .wi{
+  color: white;
   font-size: 5em;
+  text-shadow: 1px 0px 1px orange, 0px 1px 1px #FF1EA8,
+  2px 1px 1px orange, 1px 2px 1px #FF1EA8,
+  3px 2px 1px orange, 2px 3px 1px #FF1EA8,
+  4px 3px 1px orange, 3px 4px 1px #FF1EA8,
+  5px 4px 1px orange, 4px 5px 1px #FF1EA8,
+  6px 5px 1px orange, 5px 6px 1px #FF1EA8,
+  7px 6px 1px orange;
+
 }
 .hide{
   visibility: hidden;
