--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@ button:focus{
 	to { transform: rotate(360deg); }
 }
 .wi{
-  color: white;
+  color: #333333;
+  /*color: white;*/
   font-size: 5em;
   text-shadow: 1px 0px 1px orange, 0px 1px 1px #FF1EA8,
   2px 1px 1px orange, 1px 2px 1px #FF1EA8,
@@ -65,7 +66,9 @@ button:focus{
   5px 4px 1px orange, 4px 5px 1px #FF1EA8,
   6px 5px 1px orange, 5px 6px 1px #FF1EA8,
   7px 6px 1px orange;
-
+}
+.wi-day-cloudy{
+  color: white !important;
 }
 .hide{
   visibility: hidden;
